--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@ title: Blog
 cover: true
 image: /assets/img/hydejack-8.png
 ---
+<meta http-equiv="refresh" content="time; URL=https://cis.unimelb.edu.au/research/artificial-intelligence/Natural-Language-Processing" />
