--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
----
-layout: blog
-title: Blog
-cover: true
-image: /assets/img/hydejack-8.png
----
-<meta http-equiv="refresh" content="time; URL=https://cis.unimelb.edu.au/research/artificial-intelligence/Natural-Language-Processing" />
+<html xmlns="http://www.w3.org/1999/xhtml">    
+  <head>      
+    <title>UOM NLP</title>      
+    <meta http-equiv="refresh" content="0;URL='https://cis.unimelb.edu.au/research/artificial-intelligence/Natural-Language-Processing'" />    
+  </head>    
+  <body> 
+    <p>This page has moved</p> 
+  </body>  
+</html>     
